# climbiq

./: .gitignore  README.md  pyproject.toml
climbiq/kinematics/: com.py  derivatives.py  smoothing.py
climbiq/metrics/: pauses.py  phases.py  smoothness.py
climbiq/pose/: base.py  mediapipe_estimator.py  types.py
tests/kinematics/: test_com.py  test_derivatives.py  test_smoothing.py
tests/metrics/: test_pauses.py  test_phases.py  test_smoothness.py
tests/pose/: test_types.py
